Added basic tag filters, removed tag filter section temporarily Update app.py, content.json, and 9 more files...

--- a/static/resources/NibblePoker/css/extra.css
+++ b/static/resources/NibblePoker/css/extra.css
@@ -29,3 +29,11 @@ input[type=file].np-file-input-drop {
     margin-top: calc(1rem* 0.5);
     margin-bottom: calc(1rem* 0.5);
 }
+
+.hide-if-last:last-child {
+    display: none;
+}
+
+.hide-if-first:first-child {
+    display: none;
+}
