--- a/templates/pages/project_index.jinja
+++ b/templates/pages/project_index.jinja
@@ -16,7 +16,7 @@
 
     {% for project_data in get_sorted_projects_by_tags(requested_tags) %}
 
-        <hr class="subtle">
+        <hr class="subtle hide-if-first">
 
         <!--<div class="p-s border r-m">-->
         <div class="p-xs r-m">
