--- a/templates/pages/_content_index.jinja
+++ b/templates/pages/_content_index.jinja
@@ -1,7 +1,6 @@
 {% extends "base_www.jinja" %}
 
 {% block main_content %}
-    {% block content_filters %}{% endblock %}
-    <!--<hr class="subtle">-->
+    <!--{% block content_filters %}{% endblock %}-->
     {% block content_listing %}{% endblock %}
 {% endblock %}
