--- a/templates/applets/excel-password-remover.jinja
+++ b/templates/applets/excel-password-remover.jinja
@@ -1,41 +1,48 @@
-<section id="{{ applet_data.id }}-eula">
+<section id="{{ applet_data.id }}-eula" class="mt-l mt-0-if-first">
     {{ render_h2(l10n("disclaimer.warning", "commons", user_lang)) }}
-    {{ render_paragraph(l10n("eula.1", applet_data.id, user_lang)) }}
-    {{ render_paragraph(l10n("eula.2", applet_data.id, user_lang)) }}
-    {{ render_paragraph(l10n("eula.3", applet_data.id, user_lang)) }}
+
+    <div class="content-spacer">
+        {{ render_paragraph(l10n("eula.1", applet_data.id, user_lang)) }}
+        {{ render_paragraph(l10n("eula.2", applet_data.id, user_lang)) }}
+        {{ render_paragraph(l10n("eula.3", applet_data.id, user_lang)) }}
+    </div>
 </section>
 
-<section id="{{ applet_data.id }}-input">
+<section id="{{ applet_data.id }}-input" class="mt-l mt-0-if-first">
     {{ render_h2(l10n("file.selection.title", applet_data.id, user_lang)) }}
 
-    {{ render_paragraph(l10n("file.selection.1", applet_data.id, user_lang)) }}
-
-    {{ render_file_input(applet_data.id + "-input-file", true, ".xlsx, .xlsm", true, true, user_lang) }}
+    <div class="content-spacer mt-s">
+        {{ render_file_input(
+            applet_data.id + "-input-file", true, ".xlsx, .xlsm", true, false, user_lang,
+            l10n("file.selection.1", applet_data.id, user_lang)) }}
+    </div>
 </section>
 
-<section id="{{ applet_data.id }}-details">
+<section id="{{ applet_data.id }}-details" class="mt-l mt-0-if-first">
     {{ render_h2(l10n("details.title", applet_data.id, user_lang)) }}
 
-    <div id="{{ applet_data.id }}-details-empty">
-        {{ render_paragraph(l10n("details.empty.1", applet_data.id, user_lang)) }}
-    </div>
+    <div class="content-spacer mt-s">
+        <div id="{{ applet_data.id }}-details-empty">
+            {{ render_paragraph(l10n("details.empty.1", applet_data.id, user_lang)) }}
+        </div>
 
-    <div id="{{ applet_data.id }}-details-populated" hidden>
-        {{ render_button(
-            "<i class=\"fa-duotone fa-solid fa-floppy-disks mr-xs\"></i>" +
-                l10n("download.action.all", "commons", user_lang),
-            false, applet_data.id + "-files-download-all", "bkgd-green") }}
-        {{ render_button(
-            "<i class=\"fa-duotone fa-solid fa-trash mr-xs\"></i>" +
-                l10n("clear.all.files", "commons", user_lang),
-            false, applet_data.id + "-files-clear", "bkgd-orange") }}
-    </div>
+        <div id="{{ applet_data.id }}-details-populated" hidden>
+            {{ render_button(
+                "<i class=\"fa-duotone fa-solid fa-floppy-disks mr-xs\"></i>" +
+                    l10n("download.action.all", "commons", user_lang),
+                false, applet_data.id + "-files-download-all", "bkgd-green") }}
+            {{ render_button(
+                "<i class=\"fa-duotone fa-solid fa-trash mr-xs\"></i>" +
+                    l10n("clear.all.files", "commons", user_lang),
+                false, applet_data.id + "-files-clear", "bkgd-orange") }}
+        </div>
 
-    <div id="{{ applet_data.id }}-result-container"></div>
+        <div id="{{ applet_data.id }}-result-container" class="mt-s"></div>
+    </div>
 </section>
 
 <template id="tmpl-success-root">
-    <div class="bkgd-grid10 w-full r-l border cursor-pointer epr-download-all-click">
+    <div class="bkgd-grid10 w-full r-l border cursor-pointer epr-download-all-click mt-xs">
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-green bkgd-grid30 rl-l">
@@ -56,7 +63,7 @@
 </template>
 
 <template id="tmpl-warning-root">
-    <div class="bkgd-grid10 w-full r-l border">
+    <div class="bkgd-grid10 w-full r-l border mt-xs">
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-orange bkgd-grid30 rl-l">
@@ -81,7 +88,7 @@
 </template>
 
 <template id="tmpl-error-root">
-    <div class="bkgd-grid10 w-full r-l border">
+    <div class="bkgd-grid10 w-full r-l border mt-xs">
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-red bkgd-grid30 rl-l">
