--- a/templates/projects/_project.jinja
+++ b/templates/projects/_project.jinja
@@ -45,7 +45,7 @@
         l10n(project_data.metadata.general.title_key, project_id, user_lang)
     ) }}
 
-    <div class="px-xxs">
+    <div class="px-xxs mt-m">
         {% block project_content %}{% endblock %}
     </div>
 
