--- a/templates/elements/heading.jinja
+++ b/templates/elements/heading.jinja
@@ -8,7 +8,7 @@
         {% elif heading_level == 4 %}
             mt-m
         {% endif %}
-        {{ heading_background_class }}">
+        {{ heading_background_class }} mt-0-if-first">
 
     <h{{ heading_level }} class="t-w-500
             {% if heading_level == 2 %}
@@ -28,7 +28,7 @@
         {{ heading_inner_html }}
 
         {% if heading_right_html is not none %}
-        <span class="ml-auto mobile-hide t-size-10 t-muted">{{ heading_right_html }}</span>
+        <!--<span class="ml-auto mobile-hide t-size-10 t-muted">{{ heading_right_html }}</span>-->
         {% endif %}
 
     </h{{ heading_level }}>
