--- a/templates/base_www.jinja
+++ b/templates/base_www.jinja
@@ -11,7 +11,8 @@
     <link rel="alternate icon" href="/favicon.ico">
     <meta name="theme-color" content="#6F2F65">
 
-    <!--<link rel="dns-prefetch" href="https://cdn.nibblepoker.lu/"/>-->
+    <link rel="dns-prefetch" href="https://cdn.nibblepoker.lu/"/>
+    <link rel="dns-prefetch" href="https://files.nibblepoker.lu/"/>
     <link rel="preconnect" href="https://cdn.nibblepoker.{{ domain_tld }}/"/>
 
     <link rel="prefetch" href="https://cdn.nibblepoker.{{ domain_tld }}/FontAwesomePro/6.7.2/webfonts/fa-brands-400.woff2" as="font" />
@@ -21,7 +22,6 @@
 
     <link rel="stylesheet" href="https://cdn.nibblepoker.{{ domain_tld }}/FontAwesomePro/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.nibblepoker.{{ domain_tld }}/NibblePoker/StandardCSS/nibblepoker.min.css">
-    <!--<link rel="stylesheet" href="https://cdn.nibblepoker.{{ domain_tld }}/Quantum/Quantum.min.css">-->
     <link rel="stylesheet" href="https://cdn.nibblepoker.{{ domain_tld }}/FamFamFam/FlagsExtended/famfamfam-flags.min.css">
 
     <link rel="stylesheet" href="{{ url_for("static", filename="resources/NibblePoker/css/extra.css") }}">
