Added licenses to Excel Password Remover, Filed file input on standalone, Added auto-clear to file input Update excel-password-remover.yml, excel-password-remover.yml, and 3 more files...

--- a/templates/applets/excel-password-remover.jinja
+++ b/templates/applets/excel-password-remover.jinja
@@ -27,14 +27,23 @@
         </div>
 
         <div id="{{ applet_data.id }}-details-populated" hidden>
-            {{ render_button(
+            {% if is_standalone %}
+                {{ render_button(
+                    l10n("download.action.all", "commons", user_lang),
+                false, applet_data.id + "-files-download-all", "bkgd-green") }}
+                {{ render_button(
+                    l10n("clear.all.files", "commons", user_lang),
+                false, applet_data.id + "-files-clear", "bkgd-orange") }}
+            {% else %}
+                {{ render_button(
                 "<i class=\"fa-duotone fa-solid fa-floppy-disks mr-xs\"></i>" +
                     l10n("download.action.all", "commons", user_lang),
                 false, applet_data.id + "-files-download-all", "bkgd-green") }}
-            {{ render_button(
+                {{ render_button(
                 "<i class=\"fa-duotone fa-solid fa-trash mr-xs\"></i>" +
                     l10n("clear.all.files", "commons", user_lang),
                 false, applet_data.id + "-files-clear", "bkgd-orange") }}
+            {% endif %}
         </div>
 
         <div id="{{ applet_data.id }}-result-container" class="mt-s"></div>
@@ -46,13 +55,21 @@
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-green bkgd-grid30 rl-l">
-                    <i class="fa-duotone fa-solid fa-circle-check mx-s"></i>
+                    {% if is_standalone %}
+                        <span class="mx-xxs">✅</span>
+                    {% else %}
+                        <i class="fa-duotone fa-solid fa-circle-check mx-s"></i>
+                    {% endif %}
                 </td>
                 <td class="w-full t-bold">
                     <span id="tmpl-success-filename">PlaceholderSuccessName.xlsx</span>
                 </td>
                 <td rowspan="2" class="bl bkgd-blue bkgd-grid30 rr-l">
-                    <i class="fa-duotone fa-download  mx-s"></i>
+                    {% if is_standalone %}
+                        <span class="mx-xxs">💾</span>
+                    {% else %}
+                        <i class="fa-duotone fa-download  mx-s"></i>
+                    {% endif %}
                 </td>
             </tr>
             <tr class="t-italic">
@@ -67,7 +84,11 @@
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-orange bkgd-grid30 rl-l">
-                    <i class="fa-duotone fa-solid fa-triangle-exclamation mx-s"></i>
+                    {% if is_standalone %}
+                        <span class="mx-xxs">⚠️</span>
+                    {% else %}
+                        <i class="fa-duotone fa-solid fa-triangle-exclamation mx-s"></i>
+                    {% endif %}
                 </td>
                 <td class="w-full t-bold">
                     <span id="tmpl-warning-filename">PlaceholderWarningName.xlsx</span>
@@ -92,7 +113,11 @@
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-red bkgd-grid30 rl-l">
-                    <i class="fa-duotone fa-solid fa-hexagon-exclamation mx-s"></i>
+                    {% if is_standalone %}
+                        <span class="mx-xxs">❌</span>
+                    {% else %}
+                        <i class="fa-duotone fa-solid fa-hexagon-exclamation mx-s"></i>
+                    {% endif %}
                 </td>
                 <td class="w-full t-bold">
                     <span id="tmpl-error-filename">PlaceholderErrorName.xlsx</span>
@@ -110,8 +135,13 @@
 </template>
 
 {% if is_standalone %}
-    <section id="{{ applet_data.id }}-licenses">
-        {{ render_h2(l10n("licenses.title", applet_data.id, user_lang)) }}
-        <p>123</p>
+    <section id="{{ applet_data.id }}-licenses" class="mt-l mt-0-if-first">
+        {{ render_h2(l10n("license.title", applet_data.id, user_lang)) }}
+
+        <div class="content-spacer">
+            {{ render_paragraph(
+                l10n("license.text.1", applet_data.id, user_lang) + "<br>" + l10n("license.text.2", applet_data.id, user_lang)
+            ) }}
+        </div>
     </section>
 {% endif %}
