--- a/templates/robots.jinja
+++ b/templates/robots.jinja
@@ -1,3 +1,3 @@
 User-agent: *
 Allow: /
-Sitemap: https://nibblepoker.{{ domain_tld }}/sitemap.txt
+Sitemap: https://nibblepoker.{{ domain_tld }}/sitemap.xml
